--- a/mg_su_2015c/css/style.css
+++ b/mg_su_2015c/css/style.css
@@ -1610,7 +1610,6 @@ margin-left: -165px	}
     margin-right: 0;
     margin-top: 8px;
 	display: block;
-
 }
 
 .pg-cat-img-detail-box img,.pg-image {
@@ -1619,5 +1618,9 @@ border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+}
+
+.page-header{
+	margin-bottom: 40px;
 }
 /* new - */
