--- a/mg_su_2015b/css/style.css
+++ b/mg_su_2015b/css/style.css
@@ -1602,3 +1602,7 @@ margin-left: -165px	}
 /*==================================== submenu ========================================================*/
 
 /* new - */
+
+.logo{
+	border: 0px;
+}
