--- a/mg_su_2015a/css/style.css
+++ b/mg_su_2015a/css/style.css
@@ -1621,3 +1621,11 @@ border-bottom-left-radius: 5px;
     border-top-right-radius: 5px;
 }
 /* new - */
+
+.logo{
+	border: 0px;
+}
+
+.news-item  img{
+	border: 0px;
+}
